Building for .netcore 3.0 and making required code changes, updating nuget generation.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,12 @@ stages:
         release:
           configuration: release
     steps:
+      - task: UseDotNet@2
+        displayName: 'Install dotnet SDK 3.0'
+          inputs:
+            packageType: sdk
+            version: 3.0.100
+            installationPath: $(Agent.ToolsDirectory)/dotnet
       - task: DotNetCoreCLI@2
         displayName: 'Build solution - $(Configuration)'
         inputs:
