--- a/src/Microsoft.Actions.Actors.AspNetCore/nuspec/Microsoft.Actions.Actors.AspNetCore.nuspec
+++ b/src/Microsoft.Actions.Actors.AspNetCore/nuspec/Microsoft.Actions.Actors.AspNetCore.nuspec
@@ -8,7 +8,7 @@
     <owners>Microsoft,Actions,Actors</owners>
     <license type="expression">MIT</license>
     <projectUrl>http://aka.ms/actions</projectUrl>
-    <iconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</iconUrl>
+    <icon>images\nuget_icon_ms.png</icon>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>This package contains the reference assemblies for developing Actor services using actions and AspNetCore.</description>
     <summary>This package contains the reference assemblies for developing Actor services using actions.</summary>
@@ -16,12 +16,11 @@
     <tags>Microsoft Azure Actions Actors</tags>
     <dependencies>
       <dependency id="Microsoft.Actions.Actors" version="[$version$]" />
-      <dependency id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" />
-      <dependency id="Microsoft.AspNetCore.Routing" version="2.2.0" />
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\..\bin\$Configuration$\Microsoft.Actions.Actors.AspNetCore.dll" target="lib\netstandard2.0" exclude="" />
-    <file src="..\..\..\bin\$Configuration$\Microsoft.Actions.Actors.AspNetCore.xml" target="lib\netstandard2.0" exclude="" />
+    <file src="..\..\..\properties\nuget_icon_ms.png" target="images\" />
+    <file src="..\..\..\bin\$Configuration$\Microsoft.Actions.Actors.AspNetCore.dll" target="lib\netcoreapp3.0" exclude="" />
+    <file src="..\..\..\bin\$Configuration$\Microsoft.Actions.Actors.AspNetCore.xml" target="lib\netcoreapp3.0" exclude="" />
   </files>
 </package>
