--- a/src/Microsoft.Actions.Actors/nuspec/Microsoft.Actions.Actors.nuspec
+++ b/src/Microsoft.Actions.Actors/nuspec/Microsoft.Actions.Actors.nuspec
@@ -8,7 +8,7 @@
     <owners>Microsoft,Actions,Actors</owners>
     <license type="expression">MIT</license>
     <projectUrl>http://aka.ms/actions</projectUrl>
-    <iconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</iconUrl>
+    <icon>images\nuget_icon_ms.png</icon>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>This package contains the reference assemblies for developing Actor services using actions.</description>
     <summary>This package contains the reference assemblies for developing Actor services using actions.</summary>
@@ -19,7 +19,8 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\..\bin\$Configuration$\Microsoft.Actions.Actors.dll" target="lib\netstandard2.0" exclude="" />
-    <file src="..\..\..\bin\$Configuration$\Microsoft.Actions.Actors.xml" target="lib\netstandard2.0" exclude="" />
+    <file src="..\..\..\properties\nuget_icon_ms.png" target="images\" />
+    <file src="..\..\..\bin\$Configuration$\Microsoft.Actions.Actors.dll" target="lib\netcoreapp3.0" exclude="" />
+    <file src="..\..\..\bin\$Configuration$\Microsoft.Actions.Actors.xml" target="lib\netcoreapp3.0" exclude="" />
   </files>
 </package>
