--- a/samples/Directory.Build.props
+++ b/samples/Directory.Build.props
@@ -1,5 +1,5 @@
 <Project>
-  <Import Project="$(MSBuildThisFileDirectory)..\properties\actions_managed_netstandard.props" />
+  <Import Project="$(MSBuildThisFileDirectory)..\properties\dapr_managed_netcore.props" />
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
