Building for .netcore 3.0 ,making required code changes, updating nuget generation (#60)
* Updating to netcore3.0

* Building for .netcore 3.0 and making required code changes, updating nuget generation.

* Fixing indent in pipeline yaml

* making test interfaces and test classes public to allow codegen

* simplifying default expression (C# 7.1 syntax)

* Using simple using statement (C# 8.0 feature)

* USing unused params and using pattern matching

* Update test/Microsoft.Actions.Actors.Test/ActorMethodInvocationExceptionTests.cs

Co-Authored-By: Ryan Nowak <nowakra@gmail.com>

* using context.Request.RouteValues instead of context.GetRouteData()

--- a/test/Microsoft.Actions.Actors.Test/Microsoft.Actions.Actors.Test.csproj
+++ b/test/Microsoft.Actions.Actors.Test/Microsoft.Actions.Actors.Test.csproj
@@ -1,11 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\properties\actions_managed_netstandard.props" />
+  <Import Project="..\..\properties\actions_managed_stylecop.props" />
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <IsPackable>false</IsPackable>
-
-    <SignAssembly>true</SignAssembly>
+    <DocumentationFile>$(OutputPath)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
