--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -112,6 +112,22 @@ stages:
           packagesToPack: 'src/Microsoft.Dapr.Actors.AspNetCore/Microsoft.Dapr.Actors.AspNetCore.csproj'
           nobuild: true
           versioningScheme: 'off'
+      - task: DotNetCoreCLI@2
+        displayName: 'Package Microsoft.Dapr.Client nuget - $(Configuration)'
+        inputs:
+          command: 'pack'
+          arguments: '--configuration $(Configuration)'
+          packagesToPack: 'src/Microsoft.Dapr.Client/Microsoft.Dapr.Client.csproj'
+          nobuild: true
+          versioningScheme: 'off'
+      - task: DotNetCoreCLI@2
+        displayName: 'Package Microsoft.Dapr.AspNetCore nuget - $(Configuration)'
+        inputs:
+          command: 'pack'
+          arguments: '--configuration $(Configuration)'
+          packagesToPack: 'src/Microsoft.Dapr.AspNetCore/Microsoft.Dapr.AspNetCore.csproj'
+          nobuild: true
+          versioningScheme: 'off'
       - task: EsrpCodeSigning@1
         displayName: 'ESRP CodeSign - Nuget Package'
         condition: and(eq(variables['Configuration'], 'release'), or(contains(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/tags/v')))
