moving aspnetcore sample to its own app

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 
 # launchSettings.json for samples and tests
 /samples/**/Properties/launchSettings.json
+/samples/**/appSettings.Development.json
 /test/**/Properties/launchSettings.json
 
 # MSBuild's log file
