--- a/samples/AspNetCore/ControllerSample/ControllerSample.csproj
+++ b/samples/AspNetCore/ControllerSample/ControllerSample.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
+    <ProjectReference Include="..\..\..\src\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
