--- a/samples/AspNetCore/RoutingSample/RoutingSample.csproj
+++ b/samples/AspNetCore/RoutingSample/RoutingSample.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
+    <ProjectReference Include="..\..\..\src\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
