--- a/src/Dapr.AspNetCore/nuspec/Dapr.AspNetCore.nuspec
+++ b/src/Dapr.AspNetCore/nuspec/Dapr.AspNetCore.nuspec
@@ -7,8 +7,8 @@
     <authors>Microsoft</authors>
     <owners>Microsoft,Dapr</owners>
     <license type="expression">MIT</license>
-    <projectUrl>https://github.com/dapr/previewkit</projectUrl>
-    <icon>images\nuget_icon_ms.png</icon>
+    <projectUrl>https://github.com/dapr/dotnet-sdk</projectUrl>
+    <icon>images\logo-transparent.png</icon>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>This package contains the reference assemblies for developing services using Dapr and AspNetCore.</description>
     <summary>This package contains the reference assemblies for developing services using Dapr.</summary>
@@ -19,7 +19,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\..\properties\nuget_icon_ms.png" target="images\" />
+    <file src="..\..\..\properties\logo-transparent.png" target="images\" />
     <file src="..\..\..\bin\$Configuration$\Dapr.AspNetCore.dll" target="lib\netcoreapp3.0" exclude="" />
     <file src="..\..\..\bin\$Configuration$\Dapr.AspNetCore.xml" target="lib\netcoreapp3.0" exclude="" />
   </files>
