--- a/src/Dapr.Actors.AspNetCore/nuspec/Dapr.Actors.AspNetCore.nuspec
+++ b/src/Dapr.Actors.AspNetCore/nuspec/Dapr.Actors.AspNetCore.nuspec
@@ -7,7 +7,7 @@
     <authors>Microsoft</authors>
     <owners>Microsoft,Dapr</owners>
     <license type="expression">MIT</license>
-    <projectUrl>https://github.com/dapr/dotnet-sdk</projectUrl>
+    <projectUrl>https://github.com/dapr/dapr</projectUrl>
     <icon>images\logo-transparent.png</icon>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>This package contains the reference assemblies for developing Actor services using dapr and AspNetCore.</description>
