--- a/src/Dapr.Client/nuspec/Dapr.Client.nuspec
+++ b/src/Dapr.Client/nuspec/Dapr.Client.nuspec
@@ -17,7 +17,7 @@
   </metadata>
   <files>
     <file src="..\..\..\properties\logo-transparent.png" target="images\" />
-    <file src="..\..\..\bin\$Configuration$\Dapr.Client.dll" target="lib\netstandard3.0" exclude="" />
-    <file src="..\..\..\bin\$Configuration$\Dapr.Client.xml" target="lib\netstandard3.0" exclude="" />
+    <file src="..\..\..\bin\$Configuration$\Dapr.Client.dll" target="lib\netcoreapp3.0" exclude="" />
+    <file src="..\..\..\bin\$Configuration$\Dapr.Client.xml" target="lib\netcoreapp3.0" exclude="" />
   </files>
 </package>
