--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   build:
     name: Build Projects
-    runs-on: windows-2019    
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         configuration: [release, debug]
