--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -32,9 +32,10 @@ jobs:
         run: dotnet test code.sln --configuration ${{ matrix.configuration }}
       - name: Generate Nuget Packages - ${{ matrix.configuration }}
         run: dotnet pack code.sln --configuration ${{ matrix.configuration }}
-      -name: Copy nuget packages to artifacts
-       - run: mkdir -p bin\artifacts
-         run: copy bin\${{ matrix.configuration }}\*.nupkg bin\artifacts
+      - name: Copy nuget packages to artifacts
+        run: |
+          mkdir -p bin\artifacts
+          copy bin\${{ matrix.configuration }}\*.nupkg bin\artifacts
       - name: upload artifacts
         uses: actions/upload-artifact@master
         with:
