--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -3,13 +3,12 @@
   <Import Project="$(MSBuildThisFileDirectory)..\properties\dapr_managed_stylecop.props" />
 
   <PropertyGroup>
+    <!-- Set Output Path for tests-->
+    <OutputPath>$(RepoRoot)bin\$(Configuration)\test\$(MSBuildProjectName)\</OutputPath>
+
     <!-- Stylecop needs the documentation file to exist -->
     <DocumentationFile>$(OutputPath)$(MSBuildProjectName).xml</DocumentationFile>
     <IsPackable>false</IsPackable>
-
-    <!-- Set Output Path for tests-->
-    <OutputPath>$(RepoRoot)bin\$(Configuration)\test</OutputPath>
-
     <NoWarn>$(NoWarn),1573,1591,1712</NoWarn>
     <StylecopSuppressionsFile>$(StylecopSuppressionsFile);$(MSBuildThisFileDirectory)..\properties\stylecop\TestStylecopSuppressions.cs</StylecopSuppressionsFile>
   </PropertyGroup>
