--- a/src/Dapr.Client.Grpc/Dapr.Client.Grpc.csproj
+++ b/src/Dapr.Client.Grpc/Dapr.Client.Grpc.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <!-- Additional Nuget package properties. -->
+  <PropertyGroup>
+    <Description>This package contains the reference assemblies for making Dapr client calls using Grpc.</Description>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.9.2" />
     <PackageReference Include="Grpc" Version="2.24.0" />
