--- a/properties/dapr_managed_stylecop.props
+++ b/properties/dapr_managed_stylecop.props
@@ -5,7 +5,7 @@
     <StylecopSuppressionsFile>$(MSBuildThisFileDirectory)stylecop\GlobalStylecopSuppressions.cs</StylecopSuppressionsFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="$(StylecopSettingsFile)" />
