--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -43,7 +43,7 @@ jobs:
           # Parse release version and set REL_VERSION
           python ./.github/scripts/get_release_version.py
           echo "installing github-release-cli..."
-          sudo npm install --slient --no-progress -g github-release-cli
+          npm install --slient --no-progress -g github-release-cli
           # Get the list of files
           RELEASE_ARTIFACT=(bin/release/nugets/*)
           # Parse repository to get owner and repo names
