--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -45,7 +45,7 @@ jobs:
           echo "installing github-release-cli..."
           npm install --slient --no-progress -g github-release-cli
           # Get the list of files
-          RELEASE_ARTIFACT=(bin/release/nugets/*)
+          RELEASE_ARTIFACT=bin/release/nugets/*
           # Parse repository to get owner and repo names
           OWNER_NAME="${GITHUB_REPOSITORY%%/*}"
           REPO_NAME="${GITHUB_REPOSITORY#*/}"
