--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -44,12 +44,13 @@ jobs:
           python ./.github/scripts/get_release_version.py
           echo "installing github-release-cli..."
           npm install --slient --no-progress -g github-release-cli
-          # Get the list of files
-          RELEASE_ARTIFACT=bin/release/nugets/*
           # Parse repository to get owner and repo names
+          OWNER_NAME="${GITHUB_REPOSITORY%%/*}"
           OWNER_NAME="${GITHUB_REPOSITORY%%/*}"
           REPO_NAME="${GITHUB_REPOSITORY#*/}"
           export GITHUB_TOKEN=${{ secrets.RELEASE_USER_TOKEN }}
+          # Get the list of files
+          RELEASE_ARTIFACT=bin/release/nugets/*
           echo "Uploading Nuget packages to GitHub Release"
           echo "github-release upload --owner $OWNER_NAME --repo $REPO_NAME --tag "v${REL_VERSION}" --name "Dapr dotnet SDK v${REL_VERSION}" --prerelease true ${RELEASE_ARTIFACT[*]}"
           github-release upload --owner $OWNER_NAME --repo $REPO_NAME --tag "v${REL_VERSION}" --name "Dapr dotnet SDK v${REL_VERSION}" --prerelease true ${RELEASE_ARTIFACT[*]}
