--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -43,7 +43,7 @@ jobs:
           # Parse release version and set REL_VERSION
           python ./.github/scripts/get_release_version.py
           echo "installing github-release-cli..."
-          npm install --slient --no-progress -g github-release-cli
+          sudo npm install --silent --no-progress -g github-release-cli
           # Parse repository to get owner and repo names
           OWNER_NAME="${GITHUB_REPOSITORY%%/*}"
           OWNER_NAME="${GITHUB_REPOSITORY%%/*}"
@@ -53,4 +53,10 @@ jobs:
           RELEASE_ARTIFACT=bin/Release/nugets/*
           echo "Uploading Nuget packages to GitHub Release"
           echo "github-release upload --owner $OWNER_NAME --repo $REPO_NAME --tag "v${REL_VERSION}" --name "Dapr dotnet SDK v${REL_VERSION}" --prerelease true ${RELEASE_ARTIFACT[*]}"
-          github-release upload --owner $OWNER_NAME --repo $REPO_NAME --tag "v${REL_VERSION}" --name "Dapr dotnet SDK v${REL_VERSION}" --prerelease true ${RELEASE_ARTIFACT[*]}
+          github-release upload \
+            --owner $OWNER_NAME \
+            --repo $REPO_NAME \
+            --tag "v${REL_VERSION}" 
+            --name "Dapr dotnet SDK v${REL_VERSION}" 
+            --prerelease true \
+            ${RELEASE_ARTIFACT[*]}
